<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/padding_sides">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                >

                <EditText
                    android:id="@+id/name_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:textSize="@dimen/text_small"
                    android:shadowColor="@color/white"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/white"
                    android:textColorHighlight="@color/white"
                    android:textColorHint="@color/white"
                    android:textColorLink="@color/white"
                    android:textCursorDrawable="@color/white"
                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                >

                <EditText
                    android:id="@+id/last_name_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:inputType="text"
                    android:textSize="@dimen/text_small"
                    android:shadowColor="@color/white"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/white"
                    android:textColorHighlight="@color/white"
                    android:textColorHint="@color/white"
                    android:textColorLink="@color/white"
                    android:textCursorDrawable="@color/white"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                >

                <EditText
                    android:id="@+id/user_name_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:inputType="text"
                    android:textSize="@dimen/text_small"
                    android:shadowColor="@color/white"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/white"
                    android:textColorHighlight="@color/white"
                    android:textColorHint="@color/white"
                    android:textColorLink="@color/white"
                    android:textCursorDrawable="@color/white"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                >

                <EditText
                    android:id="@+id/phone_number_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:textSize="@dimen/text_small"
                    android:shadowColor="@color/white"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/white"
                    android:textColorHighlight="@color/white"
                    android:textColorHint="@color/white"
                    android:textColorLink="@color/white"
                    android:textCursorDrawable="@color/white"
                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                >

                <EditText
                    android:id="@+id/national_identifier_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/national_identifier"
                    android:inputType="number"
                    android:textSize="@dimen/text_small"
                    android:shadowColor="@color/white"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/white"
                    android:textColorHighlight="@color/white"
                    android:textColorHint="@color/white"
                    android:textColorLink="@color/white"
                    android:textCursorDrawable="@color/white"
                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                >

                <EditText
                    android:id="@+id/mail_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mail"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/text_small"
                    android:shadowColor="@color/white"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/white"
                    android:textColorHighlight="@color/white"
                    android:textColorHint="@color/white"
                    android:textColorLink="@color/white"
                    android:textCursorDrawable="@color/white"
                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                >

                <EditText
                    android:id="@+id/password_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textVisiblePassword"
                    android:textSize="@dimen/text_small"
                    android:shadowColor="@color/white"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/white"
                    android:textColorHighlight="@color/white"
                    android:textColorHint="@color/white"
                    android:textColorLink="@color/white"
                    android:textCursorDrawable="@color/white"
                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                >

                <EditText
                    android:id="@+id/password_repeat_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/repeat_password"
                    android:inputType="textVisiblePassword"
                    android:textSize="@dimen/text_small"
                    android:shadowColor="@color/white"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/white"
                    android:textColorHighlight="@color/white"
                    android:textColorHint="@color/white"
                    android:textColorLink="@color/white"
                    android:textCursorDrawable="@color/white"
                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                >

                <EditText
                    android:id="@+id/student_identifier_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/student_identifier"
                    android:inputType="number"
                    android:textSize="@dimen/text_small"
                    android:shadowColor="@color/white"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/white"
                    android:textColorHighlight="@color/white"
                    android:textColorHint="@color/white"
                    android:textColorLink="@color/white"
                    android:textCursorDrawable="@color/white"
                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                >

                <EditText
                    android:id="@+id/bank_account_number_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bank_account_number"
                    android:inputType="text"
                    android:textSize="@dimen/text_small"
                    android:shadowColor="@color/white"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/white"
                    android:textColorHighlight="@color/white"
                    android:textColorHint="@color/white"
                    android:textColorLink="@color/white"
                    android:textCursorDrawable="@color/white"
                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                >

                <EditText
                    android:id="@+id/shabaa_identifier_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/shabaa_identifier"
                    android:inputType="text"
                    android:textSize="@dimen/text_small"
                    android:shadowColor="@color/white"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/white"
                    android:textColorHighlight="@color/white"
                    android:textColorHint="@color/white"
                    android:textColorLink="@color/white"
                    android:textCursorDrawable="@color/white"
                    />
            </android.support.design.widget.TextInputLayout>
            <com.andexert.library.RippleView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:background="@drawable/button_sharebook"
                android:paddingBottom="10dp"
                app:rv_color="@color/sharebook"
                app:rv_rippleDuration="200"
                app:rv_ripplePadding="0dp"
                app:rv_type="rectangle"
                app:rv_zoomDuration="200">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_register_sharebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/invisible"
                    android:gravity="center"
                    android:text="ورود"
                    android:shadowColor="@color/white"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/white"
                    android:textColorHighlight="@color/white"
                    android:textColorHint="@color/white"
                    android:textColorLink="@color/white"
                    android:textCursorDrawable="@color/white"
                    android:textSize="20dp" />

            </com.andexert.library.RippleView>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>